Test to fix spacing on Posters

--- a/a2/style.css
+++ b/a2/style.css
@@ -244,6 +244,7 @@
     max-width: 1400px;
     margin: 0 auto;
     padding: 20px;
+    margin-bottom: 40px; 
   }
 
   .about-container {
@@ -267,7 +268,7 @@
     height: auto;
     max-width: 400%; 
     max-height: 400%;
-  
+  }
   
   .about-image {
     flex-basis: 30%;
@@ -287,9 +288,3 @@
       flex-basis: 100%;
     }
   }
-  
-  
-  
-  
-  
-  
